--- a/.env.dev.env
+++ b/.env.dev.env
@@ -4,5 +4,5 @@ NOTION_PROTOCOL="https"
 NOTION_HOST="api.notion.com"
 NOTION_PORT="443"
 NOTION_VERSION="2022-02-22"
-NOTION_API_KEY="secret"
-NOTION_AGENTS_DB_ID="db_id"
+NOTION_API_KEY="secret_123"
+NOTION_AGENTS_DB_ID="database_123"
